--- a/template/business_dashboard.html
+++ b/template/business_dashboard.html
@@ -56,8 +56,8 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Tesaa</a>
           <div class="d-flex">
-            <span class="navbar-text me-3">Welcome, John's Small Business</span>
-            <a href="/logout" class="btn btn-outline-primary">Logout</a>
+            <span class="navbar-text me-3">Welcome, {{.Email}}</span>
+            <a href="/login" class="btn btn-outline-primary">Logout</a>
           </div>
         </div>
       </nav>
