Fix: register page

--- a/template/index.html
+++ b/template/index.html
@@ -395,7 +395,7 @@
             <div class="row g-4">
               <div class="col-md-4">
                 <div class="card h-100">
-                  <img src="https://images.unsplash.com/photo-1556912998-c57cc6b63cd7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Sarah's Tailoring Shop" class="card-img-top">
+                  <img src="" alt="Sarah's Tailoring Shop" class="card-img-top">
                   <div class="card-body">
                     <h5 class="card-title">Sarah's Tailoring Success</h5>
                     <p class="card-text">"The loan helped me expand my tailoring business. Now I employ five people and have tripled my income!"</p>
@@ -404,7 +404,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card h-100">
-                  <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1529&q=80" alt="John's Farm" class="card-img-top">
+                  <img src="" alt="John's Farm" class="card-img-top">
                   <div class="card-body">
                     <h5 class="card-title">John's Agricultural Breakthrough</h5>
                     <p class="card-text">"With the loan, I invested in modern farming equipment. My crop yield has increased by 200%!"</p>
