Add business-link pages change $ to ksh

--- a/template/error.html
+++ b/template/error.html
@@ -74,8 +74,8 @@
         <i class="fas fa-exclamation-triangle error-icon"></i>
         <h1 class="error-title">Oops! Something went wrong</h1>
         <div class="error-details">
-          Error Code: 500
-          Message: Internal Server Error
+               Error    404 
+          Message: Page Not Found
         </div>
         <a href="/" class="btn btn-primary">Go Back to Homepage</a>
       </div>
