--- a/template/index.html
+++ b/template/index.html
@@ -210,7 +210,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <a class="navbar-brand" href="/">TESAA</a>
+          <a class="navbar-brand" href="/">Tesaa</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -257,7 +257,7 @@
             <div class="row g-4">
               <div class="col-6 col-md-3">
                 <div class="stats-box text-center">
-                  <h3>$50M+</h3>
+                  <h3>Ksh. 50M+</h3>
                   <p>Total Loans</p>
                 </div>
               </div>
