--- a/template/login.html
+++ b/template/login.html
@@ -98,9 +98,9 @@
           const rememberMe = document.getElementById('rememberMe').checked;
     
           // Simulated login process
-          console.log(`Logging in as ${loginType}`);
-          console.log(`Email: ${email}`);
-          console.log(`Remember me: ${rememberMe}`);
+          console.log(`Logging in as Ksh. {loginType}`);
+          console.log(`Email: Ksh. {email}`);
+          console.log(`Remember me: Ksh. {rememberMe}`);
     
           // TODO: Implement actual login logic here
           // For now, we'll just redirect to a dashboard page
