--- a/template/mfi/records.html
+++ b/template/mfi/records.html
@@ -125,7 +125,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Total Loans Disbursed</h5>
-                    <h2 class="card-text">$1,250,000</h2>
+                    <h2 class="card-text">Ksh. 1,250,000</h2>
                     <p class="card-text text-success"><i class="fas fa-arrow-up"></i> 15% increase</p>
                   </div>
                 </div>
@@ -175,32 +175,32 @@
                       <tbody>
                         <tr>
                           <td>January</td>
-                          <td>$150,000</td>
+                          <td>Ksh. 150,000</td>
                           <td>-</td>
                         </tr>
                         <tr>
                           <td>February</td>
-                          <td>$180,000</td>
+                          <td>Ksh. 180,000</td>
                           <td class="text-success">+20%</td>
                         </tr>
                         <tr>
                           <td>March</td>
-                          <td>$210,000</td>
+                          <td>Ksh. 210,000</td>
                           <td class="text-success">+16.7%</td>
                         </tr>
                         <tr>
                           <td>April</td>
-                          <td>$240,000</td>
+                          <td>Ksh. 240,000</td>
                           <td class="text-success">+14.3%</td>
                         </tr>
                         <tr>
                           <td>May</td>
-                          <td>$270,000</td>
+                          <td>Ksh. 270,000</td>
                           <td class="text-success">+12.5%</td>
                         </tr>
                         <tr>
                           <td>June</td>
-                          <td>$300,000</td>
+                          <td>Ksh. 300,000</td>
                           <td class="text-success">+11.1%</td>
                         </tr>
                       </tbody>
@@ -317,37 +317,37 @@
                         <tr>
                           <td>January 2023</td>
                           <td>1,254</td>
-                          <td>$325,000</td>
+                          <td>Ksh. 325,000</td>
                           <td><a href="/download" class="btn btn-sm btn-primary"><i class="fas fa-download"></i> Download</a></td>
                         </tr>
                         <tr>
                           <td>February 2023</td>
                           <td>1,389</td>
-                          <td>$362,000</td>
+                          <td>Ksh. 362,000</td>
                           <td><a href="/download" class="btn btn-sm btn-primary"><i class="fas fa-download"></i> Download</a></td>
                         </tr>
                         <tr>
                           <td>March 2023</td>
                           <td>1,512</td>
-                          <td>$395,000</td>
+                          <td>Ksh. 395,000</td>
                           <td><a href="/download" class="btn btn-sm btn-primary"><i class="fas fa-download"></i> Download</a></td>
                         </tr>
                         <tr>
                           <td>April 2023</td>
                           <td>1,678</td>
-                          <td>$437,000</td>
+                          <td>Ksh. 437,000</td>
                           <td><a href="/download" class="btn btn-sm btn-primary"><i class="fas fa-download"></i> Download</a></td>
                         </tr>
                         <tr>
                           <td>May 2023</td>
                           <td>1,845</td>
-                          <td>$481,000</td>
+                          <td>Ksh. 481,000</td>
                           <td><a href="/download" class="btn btn-sm btn-primary"><i class="fas fa-download"></i> Download</a></td>
                         </tr>
                         <tr>
                           <td>June 2023</td>
                           <td>2,021</td>
-                          <td>$527,000</td>
+                          <td>Ksh. 527,000</td>
                           <td><a href="/download" class="btn btn-sm btn-primary"><i class="fas fa-download"></i> Download</a></td>
                         </tr>
                       </tbody>
