--- a/template/register.html
+++ b/template/register.html
@@ -102,7 +102,7 @@
             </div>
             <div class="mb-3">
               <label for="confirm-password" class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" id="confirm-password" required>
+              <input type="password" class="form-control" id="confirm-password"  required>
             </div>
             <div id="business-fields">
               <div class="mb-3">
@@ -111,19 +111,19 @@
               </div>
               <div class="mb-3">
                 <label for="years-operating" class="form-label">Years in Operation</label>
-                <input type="number" class="form-control" id="years-operating" min="0" required>
+                <input type="number" class="form-control" id="years-operating" min="0" name="years" required>
               </div>
               <div class="mb-3">
                 <label for="mfi-license" class="form-label">Business License</label>
-                <input type="text" class="form-control" id="license" required>
+                <input type="text" class="form-control" id="license" name="license" required>
               </div>
               <div class="mb-3">
                 <label for="mfi-license" class="form-label">KRA Pin</label>
-                <input type="text" class="form-control" id="kra-pin" required>
+                <input type="text" class="form-control" id="kra-pin" name="kra" required>
               </div>
               <div class="mb-3">
                 <label for="mfi-license" class="form-label">Phone number</label>
-                <input type="text" class="form-control" id="phone" required>
+                <input type="text" class="form-control" id="phone" name="pnone" required>
               </div>
             </div>
             <button type="submit" class="btn btn-primary w-100">Sign up</button>
