--- a/template/register.html
+++ b/template/register.html
@@ -81,13 +81,14 @@
       <main class="container">
         <div class="login-container">
           <h2 class="text-center mb-4">Register to Tesaa</h2>
-          <div class="login-type-selector">
-            <select class="form-select" id="loginType">
-              <option value="business">Business</option>
-              <option value="mfi">Microfinance Institution</option>
-            </select>
-          </div>
+
           <form id="loginForm" action="/register" method="POST">
+            <div class="login-type-selector">
+              <select class="form-select" id="loginType" name="account-type">
+                <option value="business">Business</option>
+                <option value="microfinance">Microfinance Institution</option>
+              </select>
+            </div>
             <div class="mb-3">
               <label for="name" class="form-label">Full Name / Organization Name</label>
               <input type="text" class="form-control" id="name" required>
@@ -102,12 +103,12 @@
             </div>
             <div class="mb-3">
               <label for="confirm-password" class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" id="confirm-password"  required>
+              <input type="password" class="form-control" id="confirm-password" name="confirm" required>
             </div>
             <div id="business-fields">
               <div class="mb-3">
                 <label for="business-type" class="form-label">Business Type</label>
-                <input type="text" class="form-control" id="business-type" required>
+                <input type="text" class="form-control" id="business-type" name="type" required>
               </div>
               <div class="mb-3">
                 <label for="years-operating" class="form-label">Years in Operation</label>
