--- a/template/register.html
+++ b/template/register.html
@@ -124,7 +124,7 @@
               </div>
               <div class="mb-3">
                 <label for="mfi-license" class="form-label">Phone number</label>
-                <input type="text" class="form-control" id="phone" name="pnone" required>
+                <input type="text" class="form-control" id="phone" name="phone" required>
               </div>
             </div>
             <button type="submit" class="btn btn-primary w-100">Sign up</button>
