--- a/template/business/loan_applications.html
+++ b/template/business/loan_applications.html
@@ -64,7 +64,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="/">TESAA</a>
       <div class="d-flex">
-        <span class="navbar-text me-3">Welcome, John's Small Business</span>
+        <span class="navbar-text me-3">Welcome, {{.Email}}</span>
         <a href="/logout" class="btn btn-outline-primary">Logout</a>
       </div>
     </div>
